--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "db": "sequelize-auto -o ./schema -d ERDP -h localhost -u postgres -p 5432 -x 25651612 -e postgres -l esm"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -17,6 +18,8 @@
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "helmet": "^7.0.0",
+    "jsonwebtoken": "^9.0.0",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.11.0",
     "sequelize": "^6.32.0"
   },
