--- a/package.json
+++ b/package.json
@@ -2,15 +2,17 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "tailwind:build": "npx tailwindcss build -i ./styles/globals.css -o ./public/styles.css"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.16",
     "next": "^14.0.4",
     "postcss": "^8.4.32",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.7"
+    "tailwindcss": "^3.4.0"
   }
 }
