--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.16",
+    "axios": "^1.7.2",
     "next": "^14.0.4",
     "postcss": "^8.4.32",
     "react": "^18.2.0",
