--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "autoprefixer": "^10.4.16",
     "axios": "^1.7.2",
+    "cors": "^2.8.5",
     "next": "^14.0.4",
     "postcss": "^8.4.32",
     "react": "^18.2.0",
